# DeChord

./: .gitignore  AGENTS.md  DEBUG_REPORT.md  Dockerfile  Makefile  README.md  REAL_TRACK_QUALITY_REPORT.md  la_grenade_tab_comparison.md  pyproject.toml
.claude/: settings.json
.playwright-mcp/: page-2026-03-11T07-26-37-938Z.yml  page-2026-03-11T07-26-44-204Z.yml  page-2026-03-11T14-16-28-794Z.yml  page-2026-03-11T21-43-31-606Z.yml  page-2026-03-12T07-04-37-383Z.yml  page-2026-03-12T12-04-28-595Z.yml  page-2026-03-12T12-16-14-460Z.yml
backend/: lameenc.py  pyproject.toml
backend/app/: analysis.py  db.py  db_schema.sql  main.py  midi.py  models.py  pipeline_presets.py  runtime.py  stems.py  tabs.py
backend/app/services/: alphatex_exporter.py  bass_transcriber.py  dense_note_generator.py  fingering.py  gp5_reference.py  note_cleanup.py  onset_note_generator.py  onset_recovery.py  pipeline_trace.py  quantization.py  resource_monitor.py  rhythm_grid.py  tab_comparator.py  tab_pipeline.py  tab_report.py
backend/scripts/: __init__.py  eval_no_madmom.py  evaluate_tab_quality.py  phase4_stage_attribution.py  phase5_fusion_debug.py  quick_eval.py  run-fastapi-portless.sh
backend/tests/: test_alphatex_exporter.py  test_analysis.py  test_api.py  test_bass_transcriber.py  test_crud_archive.py  test_db_bootstrap.py  test_dense_note_generator.py  test_eval_no_madmom.py  test_evaluate_tab_quality.py  test_fingering.py  test_gp5_reference.py  test_midi.py  test_note_cleanup.py  test_onset_note_generator.py  test_onset_recovery.py  test_phase4_stage_attribution.py  test_phase5_fusion_debug.py  test_pipeline_presets.py  test_pipeline_trace.py  test_pitch_stability.py  test_progress_reporting.py  test_quantization.py  test_resource_monitor.py  test_rhythm_grid.py  test_stems.py  test_tab_comparator.py  test_tab_pipeline.py  test_tab_report.py  test_tabs.py  test_telegram_summary_script.py
designs/: README.md
designs.opus46/: README.md
(+577 files in other folders)
